feature(BJS-52599) Add CRUD for Recommendation - Add unit tests - Add validation for methods